Don't call CloseBubble multiple times in ExtensionInstalledBubbleView

fixes crashes on clicking "manage extensions" or "sign in to chrome"

BUG=661096

Review-Url: https://codereview.chromium.org/2468873003
Cr-Commit-Position: refs/heads/master@{#429912}

Former-commit-id: 5d800ae3299fcbda1e0d9111aa83ae707c2c2fb6